--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   provider: ^6.0.5
+  version: ^3.0.2
 
 dev_dependencies:
   flutter_test:
