--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   version: ^3.0.2
   http: ^0.13.5
   path_provider: ^2.0.13
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
