--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,3 +9,7 @@ on:
 jobs:
   publish:
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
