--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,13 @@ on:
 
 jobs:
   publish:
-    permissions:
-      id-token: write
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@main
+
+      - name: '>> Flutter plugin <<'
+        uses: k-paxian/dart-package-publisher@master
+          with:
+            accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
+            refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
